--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,11 @@
 }
 
 /* navbar */
-.navbar {
+
+.navbar .nav {
+    width: 35%;
+    padding: 10px;
+    border-radius: 25px;
     background-color: #8bc5d5;
     box-shadow: 5px 2px 9px #9ee1f3;
 }
@@ -20,8 +24,9 @@
     color: #fff;
     font-weight: 700;
     text-decoration: none;
-    margin-right: 1rem;
+    margin: 0 18px;
     transition: 0.7s ease-in;
+    width: max-content;
 }
 
 .navbar .link:focus {
@@ -89,7 +94,161 @@
 
 .home img {
     width: 100%;
+    margin: 20px 0;
     border-radius: 50%;
     border: 1px solid var(--main);
     padding: 40px;
+}
+
+/* projects */
+.projects {
+    margin-top: 15vh;
+}
+
+.projects img {
+    width: 100%;
+    height: 70%;
+    margin-top: 20px;
+    opacity: .9;
+    transition: 0.8s;
+}
+.projects img:hover {
+    opacity: 1;
+} 
+
+.projects .up-projects {
+    display: flex;
+    justify-content: space-between;
+}
+
+.projects .border-project {
+    border: 1px solid var(--hover);
+    border-radius: 20px;
+    padding: 15px;
+    margin-top: 20px;
+}
+
+.projects h1 {
+    text-transform: capitalize;
+    border-bottom: var(--hover) solid 3px;
+    padding: 10px 0;
+    width: max-content;
+}
+
+.projects h1 span {
+    color: var(--secont-color);
+}
+
+.projects .link {
+    text-decoration: none;
+}
+
+.projects h3 {
+    color: var(--main);
+    transition: 0.8s;
+    cursor: pointer;
+}
+.projects h3:hover {
+    color: #000;
+}
+
+.projects h3 span {
+    color: var(--secont-color);
+}
+.projects h3 span:hover {
+    color: var(--hover);
+}
+
+.skills {
+    margin-top: 15vh;
+}
+
+.skills h2 {
+    text-transform: capitalize;
+    border-bottom: var(--hover) solid 3px;
+    padding: 10px 0;
+    width: max-content;
+}
+
+.skills h2 span {
+    color: var(--hover);
+}
+
+
+.skills .btn {
+    cursor: copy;
+    background-color: var(--hover);
+    color: #fff;
+    margin: 20px;
+    width: max-content;
+}
+
+.skills .btn:hover {
+    background-color: var(--main);
+    color: #fff;
+}
+
+/* contact */
+.contact h1 {
+    text-transform: capitalize;
+    margin-top: 15vh;
+    border-bottom: var(--hover) solid 3px;
+    padding: 10px 0;
+    width: max-content;
+}
+
+.contact h1 span {
+    color: var(--hover);
+}
+
+.contact .main-paragraph {
+    color: var(--main);
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.contact .contact-in {
+    display: flex;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.contact .contact-in p {
+    font-size: 20px;
+    margin: 0 10px 0 0;
+    border: 1px solid #fff;
+    border-radius: 25%;
+    padding: 5px 10px 10px;
+    color: #fff;
+    background-color: var(--secont-color);
+}
+
+.contact .btn:hover {
+    border: 1px solid #fff;
+    text-align: center;
+    background-color: var(--main);
+    color: #fff;
+}
+
+.contact .contact-in b {
+    padding: 10px 10px 0 10px;
+}
+
+.contact .contact-in b:hover {
+    border: 1px solid #fff;
+    background-color: var(--main);
+    color: #fff;
+    padding: 10px 10px 0 10px;
+    border-radius: 5px;
+    cursor: copy;
+}
+
+.contact .contact-margin-col-img {
+    margin-top: 15vh;
+}
+
+.contact img {
+    width: 100%;
+    border-radius: 25%;
+    padding: 0 40px;
 }
